force-app/main/default/objects/FS_Global_Settings__c/FS_Global_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Global configuration settings for FlowSense monitoring and analysis</description>
    <label>FlowSense Global Settings</label>
    
    <!-- Core Settings -->
    <fields>
        <fullName>Enable_Error_Alerts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Error Alerts</label>
        <type>Checkbox</type>
    </fields>
    
    <fields>
        <fullName>Retention_Days__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Retention Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>Max_Runs_To_Retain__c</fullName>
        <defaultValue>100000</defaultValue>
        <label>Max Runs to Retain</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Performance Monitoring -->
    <fields>
        <fullName>Enable_CPU_Monitoring__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable CPU Monitoring</label>
        <type>Checkbox</type>
    </fields>
    
    <fields>
        <fullName>CPU_Warning_Threshold_Ms__c</fullName>
        <defaultValue>5000</defaultValue>
        <label>CPU Warning Threshold (ms)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>CPU_Critical_Threshold_Ms__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>CPU Critical Threshold (ms)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>SOQL_Warning_Threshold__c</fullName>
        <defaultValue>50</defaultValue>
        <label>SOQL Warning Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>SOQL_Critical_Threshold__c</fullName>
        <defaultValue>90</defaultValue>
        <label>SOQL Critical Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>DML_Warning_Threshold__c</fullName>
        <defaultValue>100</defaultValue>
        <label>DML Warning Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>DML_Critical_Threshold__c</fullName>
        <defaultValue>140</defaultValue>
        <label>DML Critical Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Step Logging -->
    <fields>
        <fullName>Enable_Step_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Step Logging</label>
        <type>Checkbox</type>
    </fields>
    
    <fields>
        <fullName>Step_Logging_Sample_Rate__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Step Logging Sample Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    
    <!-- Debug and Development -->
    <fields>
        <fullName>Enable_Debug_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Debug Logging</label>
        <type>Checkbox</type>
    </fields>
    
    <!-- Batch Processing -->
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>Enable_Async_Processing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Async Processing</label>
        <type>Checkbox</type>
    </fields>
    
    <!-- Documentation Settings -->
    <fields>
        <fullName>Auto_Generate_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generate Documentation</label>
        <type>Checkbox</type>
    </fields>
    
    <fields>
        <fullName>Documentation_Template__c</fullName>
        <label>Documentation Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    
</CustomObject>