force-app/main/default/objects/FS_Global_Settings__c/fields/CPU_Fair_Threshold__c.field-meta.xml
<CustomField>
    <fullName>CPU_Fair_Threshold__c</fullName>
    <label>CPU Fair Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>