force-app/main/default/objects/FS_Global_Settings__c/fields/DML_Excellent_Threshold__c.field-meta.xml
<CustomField>
    <fullName>DML_Excellent_Threshold__c</fullName>
    <label>DML Excellent Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>